# http://doc.crates.io/manifest.html
[package]
name = "nibble"
version = "0.1.0"
authors = ["Alexander Merritt <merritt.alex@gatech.edu>"]

[dependencies]
libc = "0.2.7"
log = "0.3.5"
time = "0.1.34"
rand = "0.3.14"
crossbeam = "0.2.5"
itertools = "0.4.13"
lazy_static = "0.2.1"

[features]
default = ["epoch-tsc"]

# Epoch Options
epoch-tsc = []
epoch-atomic = []   # not implemented
epoch-combiner = [] # not implemented
